# backendless

./: .gitignore  README.md  backendless.py  docker-compose.yaml  requirements.txt  schema.json  test-data.sql
api/: Cargo.toml  Dockerfile  settings.toml
api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
api/migrations/2020-06-20-130759_users/: up.sql
api/migrations/2020-06-20-132921_projects/: up.sql
api/migrations/2020-06-20-153213_deployments/: down.sql  up.sql
api/src/: config.rs  database.rs  errors.rs  main.rs  project_format.rs  redis.rs  schema.rs
api/src/models/: deployment.rs  handler.rs  mod.rs  project.rs  route.rs  user.rs
api/src/routes/: authentication.rs  deployments.rs  mod.rs  projects.rs  users.rs  utils.rs
example_project/: project.yaml
example_project/routes/: complete.yaml  create.yaml  delete.yaml  read.yaml  update.yaml
runtime/: .dockerignore  Dockerfile  config.py  loader.py  main.py  requirements.txt  util.py
runtime/db/: __init__.py  models.py  tables.py
runtime/handler/: __init__.py  generate.py  operations.py  substitution.py
runtime/pubsub/: __init__.py  channel.py  modifiers.py  setup.py
ui/: 404.html  index.html
wip-ui/: package.json
wip-ui/public/: index.html
wip-ui/src/: bindings.js  index.css  index.js  util.js
wip-ui/src/components/: header.js
